--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "url": "https://github.com/neophob/node-sonos-http-api.git"
   },
   "dependencies": {
-    "sonos-discovery": "git+https://github.com/jishi/node-sonos-discovery.git#master",
     "socket.io": "^1.0.6",
-    "winston": "^0.7.3"
+    "winston": "^0.7.3",
+    "easysax": "0.1.x",
+    "async": "0.2.x",
+    "html-entities": "1.0.x"
   },
   "engine": "node 0.10.x",
   "main": "lib/sonos-http-api.js"
