--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-env": "^0.4.1",
-    "grunt-express": "*",
-    "grunt-istanbul": "~0.3.0",
-    "grunt-mocha-test": "~0.11.0"
+    "grunt-mocha-test": "~0.11.0",
+    "supertest": "^0.13.0",
+    "chai": "*"
   },
   "engine": "node 0.10.x",
-  "main": "lib/sonos-http-api.js"
+  "start": "node ./app/server"
 }
